fix(components): reduce spacing in bio tree

--- a/app/scripts/components/ui/biospecimen/styles.less
+++ b/app/scripts/components/ui/biospecimen/styles.less
@@ -9,7 +9,7 @@
   }
 
   .biospecimen-row {
-    padding: 2px 15px;
+    padding: 2px 0 2px 5px;
 
     &.document {
       cursor: pointer;
